# gddoc2yml

./: .coveragerc  .flake8  .gitignore  .gitmodules  .markdownlint.json  .markdownlintignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-site.yml  deploy.yml  on-release.yml  pull-request.yml  pull_request.yml  python-package.yml  test.yml
doc/: docfx.json  index.md  toc.yml
doc/godot/: index.md  toc.yml
doc/godot-template/partials/: class.header.tmpl.partial  class.tmpl.partial
doc/godot-template/public/: main.js
doc/godot/api/: index.md
examples/: README.md
examples/godot-docs-link/: docfx.json  godot-template  index.md  toc.yml
examples/project/: .gitignore  icon.svg.import  project.godot
examples/project/scripts/: Helloworld.gd
src/gddoc2yml/: gdxml2xrefmap.py  gdxml2yml.py  gdxml_helpers.py  make_rst.py  version.py
tests/: README.md  test_console.py  test_gdxml2yml.py
tests/classes/: CollisionObject3D.xml  Node.xml  Node3D.xml  Object.xml  PhysicsBody3D.xml  StaticBody3D.xml  int.xml
